[gd_scene load_steps=7 format=3 uid="uid://b1lgrf0gefuw6"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_dn33o"]
[ext_resource type="Texture2D" uid="uid://b3ok0u787noda" path="res://Assets/bgpong.png" id="2_n0u3q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hnj73"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17rvm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3u128"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tt1ea"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dn33o")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(574, 331)
texture = ExtResource("2_n0u3q")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 138.0
offset_right = 716.0
offset_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TwoPlayerSolo" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_hnj73")
text = "2 Players On This PC"

[node name="Play Against PC" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_17rvm")
text = "Play Against PC"

[node name="Multiplayer" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3u128")
text = "Play Multiplayer (not working)"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_tt1ea")
text = "Exit Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/TwoPlayerSolo" to="." method="_on_play_solo_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play Against PC" to="." method="_on_play_against_pc_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
